--- a/yaak/yaak.rq_TeyRNPaREa.yaml
+++ b/yaak/yaak.rq_TeyRNPaREa.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_TeyRNPaREa
 createdAt: 2025-05-19T08:15:24.932133400
-updatedAt: 2025-05-19T08:21:39.389144
+updatedAt: 2025-05-19T10:51:18.286407900
 workspaceId: wk_6mRMT4yPtm
 folderId: fl_iE8G92PhrS
 authentication: {}
@@ -14,5 +14,5 @@ headers: []
 method: DELETE
 name: Delete Bike
 sortPriority: 4000.0
-url: http://localhost:5074/api/bikes/49076944-be80-48f0-bd3c-6a9e628b41d3
+url: http://localhost:5074/api/bikes/4f7c709a-a913-4dc2-a5df-f3d8f00c5ecc
 urlParameters: []
