--- a/yaak/yaak.rq_iDF6d67zTv.yaml
+++ b/yaak/yaak.rq_iDF6d67zTv.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_iDF6d67zTv
 createdAt: 2025-05-19T07:58:29.607260600
-updatedAt: 2025-05-19T08:16:07.007104
+updatedAt: 2025-05-19T11:38:14.728369400
 workspaceId: wk_6mRMT4yPtm
 folderId: fl_iE8G92PhrS
 authentication: {}
@@ -14,5 +14,5 @@ headers: []
 method: GET
 name: Get Bike
 sortPriority: 1000.0
-url: http://localhost:5074/api/bikes/214601a1-cc3a-432d-b33e-f2abd913ec7c
+url: http://localhost:5074/api/bikes/4f7c709a-a913-4dc2-a5df-f3d8f00c5ecc
 urlParameters: []
