--- a/yaak/yaak.fl_iE8G92PhrS.yaml
+++ b/yaak/yaak.fl_iE8G92PhrS.yaml
@@ -2,9 +2,9 @@ type: folder
 model: folder
 id: fl_iE8G92PhrS
 createdAt: 2025-05-19T07:58:17.977625
-updatedAt: 2025-05-19T07:58:17.977626100
+updatedAt: 2025-05-20T06:18:10.131514600
 workspaceId: wk_6mRMT4yPtm
 folderId: null
 name: Bike
 description: ''
-sortPriority: -1747641400000.0
+sortPriority: 3000.0
