Refactor bike and component services to use event sourcing with Wolverine

--- a/yaak/yaak.rq_95MwNC8eS4.yaml
+++ b/yaak/yaak.rq_95MwNC8eS4.yaml
@@ -1,8 +1,8 @@
 type: http_request
 model: http_request
-id: rq_6M6WiVKHpg
-createdAt: 2025-05-20T06:18:06.129474100
-updatedAt: 2025-05-20T13:48:13.463372900
+id: rq_95MwNC8eS4
+createdAt: 2025-05-20T13:56:13.037337800
+updatedAt: 2025-05-20T13:59:58.424392600
 workspaceId: wk_6mRMT4yPtm
 folderId: fl_9LbhJV9eMP
 authentication: {}
@@ -11,10 +11,12 @@ body:
   text: |-
     {
       "bikeId": "a4e092cf-0a71-48dd-a915-d013ec615373",
+      "oldComponentId": "8a60ad37-27cb-46f1-9443-758ddb977200",
       "componentType": "Chain",
       "brand": "Shimano",
-      "model": "105",
-      "purchaseDate": ${[ faker.date.past() ]}
+      "model": "Ultegra",
+      "purchaseDate": ${[ faker.date.past() ]},
+      "position": null
     }
 bodyType: application/json
 description: ''
@@ -23,8 +25,8 @@ headers:
   name: Content-Type
   value: application/json
   id: null
-method: POST
+method: PUT
 name: ''
 sortPriority: 0.0
-url: http://localhost:5074/api/components/a4e092cf-0a71-48dd-a915-d013ec615373
+url: http://localhost:5074/api/components/a4e092cf-0a71-48dd-a915-d013ec615373/8a60ad37-27cb-46f1-9443-758ddb977200
 urlParameters: []
