--- a/src/backend/backend.csproj
+++ b/src/backend/backend.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Scalar.AspNetCore" Version="2.3.1" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="WolverineFx" Version="3.13.3" />
   </ItemGroup>
 
 </Project>
