--- a/yaak/yaak.rq_wHEyLoB2go.yaml
+++ b/yaak/yaak.rq_wHEyLoB2go.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_wHEyLoB2go
 createdAt: 2025-05-20T06:30:29.590740600
-updatedAt: 2025-05-20T06:31:39.019026200
+updatedAt: 2025-05-21T13:27:18.575196100
 workspaceId: wk_6mRMT4yPtm
 folderId: fl_9LbhJV9eMP
 authentication: {}
@@ -12,7 +12,7 @@ bodyType: null
 description: ''
 headers: []
 method: GET
-name: ''
-sortPriority: 0.0
+name: Get Bike Components
+sortPriority: 1000.0
 url: http://localhost:5074/api/components/19405376-0657-45cb-85b6-e8f394bbe277/53a544d8-81be-4f70-a546-c5420cf37538
 urlParameters: []
