Refactor project structure: update README for bike wear tracking, enhance Docker setup, and implement new BikeAggregation logic with event sourcing.

--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,7 @@
-version: '3.8'
 services:
   postgres:
+    container_name: postgres
+    hostname: postgres
     image: postgres:latest
     environment:
       POSTGRES_USER: postgres 
@@ -10,6 +11,18 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  backend:
+    build:
+      context: .
+      dockerfile: src/backend/Dockerfile
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      MartenConnectionString: Host=postgres;Port=5432;Username=postgres;Password=postgres;Database=postgres
+    ports:
+      - "5074:5074"
+    depends_on:
+      - postgres
 
 volumes:
   postgres_data:
